admin DASHBOARD is in process

--- a/Phone Book/admin/index.html
+++ b/Phone Book/admin/index.html
@@ -15,7 +15,7 @@ require('../db/config.php');
 
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>User Dashboard</title>
+    <title>Admin Dashboard</title>
 <style>
 #download-btn a:hover{
     background-color:#3488fc;
